plugins {
    id 'org.jetbrains.intellij' version '1.4.0'
}

group 'com.github.tarn2206'
version '1.6'
sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation gradleApi()
    implementation 'io.reactivex.rxjava3:rxjava:3.1.4'
    implementation 'com.github.akarnokd:rxjava3-swing:3.1.1'

    testImplementation 'junit:junit:4.13.2'
}

intellij {
    plugins = ["java", "android", "gradle", "Kotlin"]
    version = 'IC-2020.3'
    updateSinceUntilBuild = false
}

buildSearchableOptions.enabled = false

patchPluginXml {
    changeNotes = """
<h2>1.6</h2>
<ul>
    <li>Support custom maven repository</li>
    <li>Filtering unstable versions</li>
</ul>
<h2>1.5.2</h2>
<ul>
    <li>Move refresh action from popup menu to tool window title</li>
    <li>Remove close button from tool window title</li>
</ul>
<h2>1.5.1</h2>
<ul>
    <li>Support a prefix version range: e.g. 1.+, 1.3.+</li>
    <li>Fix bug android projects not show dependencies</li>
</ul>
<h2>1.5</h2>
<ul>
    <li>Support nested-project</li>
    <li>Prevent multiple check update for same dependency</li>
    <li>Resolve existing tool window name</li>
</ul>
<h2>1.4</h2>
<ul>
    <li>Support multi-project build</li>
    <li>Remove require dependencies plugins</li>
</ul>
"""
}
